# modsim

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  .release-please-config.json  .tool-versions  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build-image.sh  docker-compose.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  tox.ini  utils.py
.github/actions/setup-poetry/: action.yml
.github/workflows/: main.yml  on-release-main.yml  release-please.yml
docs/: index.md  modules.md
examples/: modsim.csv
modsim/: __init__.py  main.py  utils.py
modules/: index.html
search/: search_index.json
tests/: test_modsim.py
