[tool.poetry]
name = "modsim"
version = "0.3.2"
description = "A Modbus TCP Device Simulator"
authors = ["Ying Shaodong <helloysd@foxmail.com>"]
readme = "README.md"
repository = "https://github.com/gavinying/modsim"
license = "MIT"
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8.2,<4.0"
pymodbus = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "^2.3.0"
sphinx = "^4.2.0"
sphinx-argparse = "^0.3.1"
sphinx-rtd-theme = "^1.0.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modsim = "modsim:app"
