[tool.poetry]
name = "modbus-tcp-simulator"
version = "0.5.0"
description = "A Simple Modbus TCP Device Simulator used for modpoll tool"
authors = ["Ying Shaodong <helloysd@gmail.com>"]
repository = "https://github.com/gavinying/modsim"
documentation = "https://gavinying.github.io/modsim/"
readme = "README.md"
packages = [{ include = "modsim" }]

[tool.poetry.dependencies]
python = ">=3.8.2,<4.0"
pymodbus = "~3.5.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^8.2.2"
deptry = "^0.16.1"
mypy = "^1.10.1"
tox = "^4.16.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["modsim"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
modsim = "modsim.main:app"
